--- a/index.html
+++ b/index.html
@@ -1,34 +1,87 @@
 <!DOCTYPE html>
 <html>
 <head>
+	 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+	 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 
 	<title>Leaflet - Map web services example</title>
 
 	<style>
-		/* your css can go here. I suggest a height of 500px */
+	 #mapid { height: 180px; }
+
+
 
 	</style>
 </head>
 <body>
-	<!-- your mapid div can go here -->
+	<div id="mapid"></div>
+
 
 <script>
-	//your javascript code can go here. (FYI: phnom penh thmey is latitude, longitude: 11.545, 104.8922)
-
-
-/* use this code instead of the tutorial since it has an access token already...
-   just remove the comment tags below so that the code is not commented out ... */
-
-/*
+  var mymap = L.map('mapid').setView([11.545, 104.8922], 13);
 	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-	    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-	    maxZoom: 18,
-	    id: 'mapbox.streets'
-	}).addTo(mymap);
-*/
+		    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+		    maxZoom: 18,
+		    id: 'mapbox.streets'
+		}).addTo(mymap);
 
-// you could try this latitude/longitude for your marker: 11.58, 104.89
+var popup = L.popup()
+    .setLatLng([11.545, 104.8922])
+    .setContent("I am a standalone popup.")
+    .openOn(mymap);
 
+		function onMapClick(e) {
+    alert("You clicked the map at " + e.latlng);
+}
+
+mymap.on('click', onMapClick);
+
+
+var marker = L.marker([11.58, 104.89]).addTo(mymap);
+
+var circle = L.circle([11.58, 104.89], {
+    color: 'red',
+    fillColor: '#f03',
+    fillOpacity: 0.5,
+    radius: 500
+}).addTo(mymap);
+
+var polygon = L.polygon([
+    [11.58, 104.89],
+    [11.58, 104.87],
+    [11.58, 104.84]
+]).addTo(mymap);
+
+marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+circle.bindPopup("I am a circle.");
+polygon.bindPopup("I am a polygon.");
+
+var popup = L.popup()
+    .setLatLng([11.545, 104.8922])
+    .setContent("I am a standalone popup.")
+    .openOn(mymap);
+
+		function onMapClick(e) {
+    alert("You clicked the map at " + e.latlng);
+}
+
+mymap.on('click', onMapClick);
+
+var popup = L.popup()
+    .setLatLng([11.545, 104.8922])
+    .setContent("I am a standalone popup.")
+    .openOn(mymap);
+
+		var popup = L.popup();
+
+function onMapClick(e) {
+    popup
+        .setLatLng(e.latlng)
+        .setContent("You clicked the map at " + e.latlng.toString())
+        .openOn(mymap);
+}
+
+mymap.on('click', onMapClick);
 
 
 </script>
